<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Volume Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="off">Off</string>
    <string name="vibrate">Vibrate</string>
    <string name="ring">Ring</string>

    <!--General Strings-->
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>

    <!-- Volume Control Headings -->
    <string name="start_volume_settings_time">Start Volume Control</string>
    <string name="end_volume_settings_time">End Volume Control</string>
    <string name="start_volume_control_settings_location">Enter Volume Control</string>
    <string name="end_volume_control_settings_location">Exit Volume Control</string>
    <string name="use_default_check_box">Use Default</string>

    <!-- List Headering -->
    <string name="profile_header">Time Profiles</string>
    <string name="location_profile_header">Location Profiles</string>

    <string name="start_time_dialog">Volume control start time:</string>
    <string name="end_time_dialog">Volume control end time:</string>
    <string name="set_control_button">Set Volume Control</string>
    <string name="toast_text">Volume Control Set</string>
    <string name="no_profiles">No Profiles</string>
    <string name="new_profile">New Profile</string>
    <string name="add_time_profile">Add Time Profile</string>
    <string name="add_location_profile">Add Location Profile</string>
    <string name="title_hint">Enter profile title.</string>

    <string name="profile_settings">Profile Settings</string>
    <string name="notification_text">Enable Notifcations to be sent every time there is a volume control change by a profile</string>
    <string name="notification_header">Notifications</string>
    <string name="time_tab">Time</string>
    <string name="location_tab">Location</string>
    <string name="primary_text_alpha_dark">.87</string>
    <string name="secondary_text_alpha_dark">.54</string>
    <string name="hint_disabled_text_alpha_dark">.38</string>
    <string name="previous_volume_setting">Use Previous Volume Setting</string>
    <string name="context_menu_delete_profile">Delete profile</string>
    <!-- Menu Items -->
    <string name="settings_menu">Settings</string>
    <string name="about_menu">About</string>
    <string name="save_menu">SAVE</string>
    <string name="delete_menu">Delete</string>

    <!-- Delete Profile Dialog -->
    <string name="dialog_delete_profile">Delete profile <xliff:g id="high">%1$s</xliff:g>?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">Ok</string>

    <string name="daily">Daily</string>
    <!-- Time Profile -->


    <!-- Location Profile -->
    <string name="enter_location_volume">Enter Location Volume</string>
    <string name="exit_location_volume">Exit Location Volume</string>
    <string name="no_locations">No Locations</string>
    <string name="new_location">New Location</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_title_hint">Enter a title for the location.</string>
    <string name="click_help_text">click here to modify volume settings</string>
    <string name="geofence_saved">Goefence saved</string>
    <string name="geofence_deleted">Geofence deleted</string>
    <string name="geofence_updated">Geofence updated</string>
    <string name="radius_text">radius(m)</string>
    <string name="unknown_street_address">Unknown Street Address</string>
    <string name="network_error">Could not get location. Please check network connection.</string>
    <string name="google_play_service_out_of_date_error">Google Play Services is out of date on this device. Can not get location. Please upgrade Google Play Services</string>
    <string name="google_play_service_connection_failed">Connection to Google Play Services Failed</string>

    <!-- Geofence strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents</string>
    <string name="unknown_geofence_error">Unknown error: the Geofence service is not available now</string>
    <string name="geofence_transition_invalid_type">Geofence transition error: invalid transition type %1$d</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="place_error">Place selection failed:</string>

    <!-- Preferences -->
    <string name="pref_notification_header">Notifications</string>
    <string name="pref_notification_header_key">notifications_header_key</string>
    <string name="pref_default_start_volume_header">Default Start/Enter Volume</string>
    <string name="pref_default_start_volume_header_key">default_start_header_key</string>
    <string name="pref_default_end_volume_header">Default End/Exit Volume</string>
    <string name="pref_default_end_volume_header_key">default_end_start_header_key</string>

    <string name="pref_time_notifications_label">Time Profile Notifications</string>
    <string name="pref_time_notifications_key" translatable="false">time_notifications</string>

    <string name="pref_location_notifications_label">Location Profile Notifications</string>
    <string name="pref_location_notifications_key" translatable="false">location_notifications</string>

    <string name="pref_notifications_true">@string/enabled</string>
    <string name="pref_notifications_false">@string/disabled</string>
    <string name="pref_notifications_default" translatable="false">true</string>

    <string name="pref_default_volume_type_setting">Volume Type</string>
    <string name="pref_default_start_volume_type_setting_key" translatable="false">default_start_volume_type</string>
    <string name="pref_default_end_volume_type_setting_key" translatable="false">default_end_volume_type</string>

    <string name="pref_default_ring_volume_setting">Ring Volume</string>
    <string name="pref_default_start_ring_volume_setting_key">default_start_ring_volume</string>
    <string name="pref_default_end_ring_volume_setting_key">default_end_ring_volume</string>
    <string name="pref_default_ring_volume_default">3</string>

    <string name="pref_default_ring_type_key_off" translatable="false">off</string>
    <string name="pref_default_ring_type_key_vibrate" translatable="false">vibrate</string>
    <string name="pref_default_ring_type_key_ring" translatable="false">ring</string>



    <!-- Widget -->
    <string name="widget_status_title">Volume Manager Current Control</string>
    <string name="widget_no_control">Not under volume control</string>
    <!-- Animations -->
    <string name="trans_profile_title">trans_profile_title</string>



    <!-- Content Descriptions -->
    <string name="cont_desc_time_profile">Time Profile</string>
    <string name="cont_desc_time_profile_tab">Time Profile Tab</string>
    <string name="cont_desc_location_profile">Location Profile</string>
    <string name="cont_desc_location_profile_tab">Location Profile Tab</string>
    <string name="cont_desc_new_profile">New Profile</string>
    <string name="cont_desc_starts">starts</string>
    <string name="cont_desc_ends">ends</string>
    <string name="cont_desc_set">set</string>
    <string name="cont_desc_toggle_icon">Profile toggle switch</string>
    <string name="cont_desc_enabled">@string/enabled</string>
    <string name="cont_desc_disabled">@string/disabled</string>
    <string name="cont_desc_profile_status">Profile is </string>
    <string name="cont_desc_profile_active">and currently active</string>
    <string name="cont_desc_detail_title">title</string>
    <string name="cont_desc_detail_start_seek_bar">start volume ring setting</string>
    <string name="cont_desc_detail_end_seek_bar">end volume ring setting</string>
    <string name="cont_desc_detail_start_time">start time</string>
    <string name="cont_desc_detail_end_time">end time</string>
    <string name="cont_desc_detail_location_map_thumbnail">Location Map Thumbnail. Select to edit map detail</string>
    <string name="cont_desc_map_current_location_button">Zoom to current location</string>
    <string name="cont_desc_map_increase_geofence_button">increase geofence radius</string>
    <string name="cont_desc_map_decrease_geofence_button">decrease geofence radius</string>
    <string name="cont_desc_widget_currently_set_to">currently under</string>
    <string name="cont_desc_widget_default">Volume Manager not currently under a profiles volume control</string>
    <string name="cont_desc_default_start_check_box">Use default start volume control settings</string>
    <string name="cont_desc_default_end_check_box">Use default end volume control settings</string>
    <string name="cont_desc_default_start_volume_type">Start volume type </string>
    <string name="cont_desc_default_end_volume_type">End volume type </string>
    <string name="cont_desc_default_start_ring_volume">Start ring volume</string>
    <string name="cont_desc_default_end_ring_volume">End ring volume</string>

    <!-- Permissions -->
    <string name="permission_fine_location_granted">Fine location permission granted</string>
    <string name="permission_fine_location_denied">Fine location permission denied</string>
</resources>
