<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBoxPreference
        android:title="@string/pref_time_notifications_label"
        android:key="@string/pref_time_notifications_key"
        android:summaryOff="@string/pref_notifications_false"
        android:summaryOn="@string/pref_notifications_true"
        android:defaultValue="@string/pref_notifications_default"
        />

    <CheckBoxPreference
        android:title="@string/pref_location_notifications_label"
        android:key="@string/pref_location_notifications_key"
        android:summaryOff="@string/pref_notifications_false"
        android:summaryOn="@string/pref_notifications_true"
        android:defaultValue="@string/pref_notifications_default"
        />

    <ListPreference
        android:title="@string/pref_location_radius_units_label"
        android:key="@string/pref_location_radius_units_key"
        android:defaultValue="@string/pref_location_radius_units_meters"
        android:entryValues="@array/pref_units_values"
        android:entries="@array/pref_units_options" />
</PreferenceScreen>