<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/profileHeaderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e6e6e6"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/profile_header"
        android:textSize="18dp" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp" >

    </ListView>
    
        <LinearLayout
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical" >
    
        <TextView
           android:id="@+id/emptyTextView"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="25sp"
           android:paddingTop="160dp"
           android:layout_gravity="center"
           android:gravity="center_horizontal"
           android:text="@string/no_profiles" />
        
        <Button 
            android:id="@+id/emptyButtonAddProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_profile"/>
            
    </LinearLayout>
</LinearLayout>
</FrameLayout>
