<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_activated"
    android:orientation="horizontal"
    android:padding="4dp" >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/profileTitleTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="@string/primary_text_alpha_dark"
            android:padding="2dp"
            android:textSize="@dimen/profile_title_text_size"
            android:transitionName="@string/trans_profile_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:alpha="@string/secondary_text_alpha_dark"
                android:padding="2dp" />

            <TextView
                android:id="@+id/profileDaysTextView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:alpha="@string/secondary_text_alpha_dark"
                android:padding="2dp" />

        </LinearLayout>
    </LinearLayout>
 
    <ImageView
        android:id="@+id/volumeStartImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="0"
        android:padding="16dp"
        android:src="@drawable/ic_action_volume_on_text" />

</LinearLayout>
