<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/end_volume_control_pane">

    <TextView
        android:id="@+id/endTimeTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:padding="4dp"
        android:textSize="48sp"
        android:text="8:00"
        android:fontFamily="sans-serif-light"
        android:layout_margin="4dp" />



    <TextView
        android:id="@+id/end_volume_control_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:padding="4dp"
        android:text="@string/end_volume_settings_time"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/endVolumeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/endOffRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/off" />

            <RadioButton
                android:id="@+id/endVibrateRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibrate" />

            <RadioButton
                android:id="@+id/endRingRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ring" />
        </RadioGroup>

        <TextView
            android:id="@+id/endRingVolumeTextView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="(3/7)"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/volumeEndImageView"
            style="@style/ProfileIcon"
            android:src="@drawable/ic_volume_up"/>

        <SeekBar
            android:id="@+id/endRingSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </LinearLayout>
</LinearLayout>