<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/wiget_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|left"
        android:background="@color/widget_title"
        android:padding="4dp"
        android:text="@string/widget_status_title"
        android:textColor="@color/white"
        android:textSize="16sp"
      />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:text="@string/widget_no_control"
            android:textColor="@color/white"
            android:id="@+id/widget_view_no_control"
            android:padding="23dp"
            android:textSize="16sp"
            android:contentDescription="@string/cont_desc_widget_default"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/widget_view_under_control"
            android:visibility="gone">

            <ImageView
                android:id="@+id/widget_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="4dp"
                android:paddingTop="8dp"
                android:src="@drawable/ic_alarm_48dp"
                android:tint="@color/app_in_alarm_color" />

            <TextView
                android:id="@+id/widget_profile_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:paddingBottom="16dp"
                android:paddingLeft="4dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="Overnight"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>