<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/startTimeTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="4dp"
        android:textSize="48sp"
        android:text="10:30"
        android:fontFamily="sans-serif-light" />


    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:padding="4dp"
        android:text="@string/start_volume_settings"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/startVolumeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/startOffRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/off" />

            <RadioButton
                android:id="@+id/startVibrateRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibrate" />

            <RadioButton
                android:id="@+id/startRingRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ring" />
        </RadioGroup>

        <TextView
            android:id="@+id/startRingVolumeTextView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="(3/7)"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/volumeStartImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_volume_up"
            android:padding="4dp" />

        <SeekBar
            android:id="@+id/startRingSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp" />

    </LinearLayout>
</LinearLayout>