<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/app_primary_color"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="6dp">
    <EditText
        android:layout_marginTop="?attr/actionBarSize"
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_hint"
        android:maxLength="20"
        android:gravity="left"
        android:singleLine="true" />

    </android.support.v7.widget.Toolbar>


    <include layout="@layout/days_of_the_week_buttons"/>

<!--
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="6"></GridLayout>
-->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/startTimeTextView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="2dp"
                android:textColor="#0FA1D3"
                android:textSize="20sp" />

            <Button
                android:id="@+id/startTimeButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_time" />

        </LinearLayout>

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:text="@string/start_volume_settings"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/startVolumeRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/startOffRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/off" />

                <RadioButton
                    android:id="@+id/startVibrateRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vibrate" />

                <RadioButton
                    android:id="@+id/startRingRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ring" />
            </RadioGroup>

            <TextView
                android:id="@+id/startRingVolumeTextView"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:text="(3/7)"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/volumeStartImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_action_volume_on_pink" />

            <SeekBar
                android:id="@+id/startRingSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp" />

        </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/endTimeTextView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="2dp"
                android:textColor="#0FA1D3"
                android:textSize="20sp" />

            <Button
                android:id="@+id/endTimeButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end_time" />

        </LinearLayout>

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:text="@string/end_volume_settings"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/endVolumeRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/endOffRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/off" />

                <RadioButton
                    android:id="@+id/endVibrateRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vibrate" />

                <RadioButton
                    android:id="@+id/endRingRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ring" />
            </RadioGroup>

            <TextView
                android:id="@+id/endRingVolumeTextView"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:text="(3/7)"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/volumeEndImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_action_volume_on_pink" />

            <SeekBar
                android:id="@+id/endRingSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp" />

        </LinearLayout>

</LinearLayout>